samples/_failures_safe/1761206838_5c940b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_32bbabc0.c: In function ‘main’:
./samples/SAFE/__tmp_32bbabc0.c:155:27: error: expected ‘]’ at end of input
  155 |     char input_buffer[4096
      |                           ^
      |                           ]
./samples/SAFE/__tmp_32bbabc0.c:155:5: error: expected declaration or statement at end of input
  155 |     char input_buffer[4096
      |     ^~~~
